--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-black==22.3.0
-pytest==7.1.1
-requests==2.27.1
-urllib3==1.26.9
-influxdb-client==1.28.0
-mypy==0.950
+black==22.3.*
+isort==5.10.*
+influxdb-client==1.28.*
+mkdocs==1.3.*
+mkdocs-material==8.5.*
+mkdocs-material-extensions==1.0.*
+mkdocs-pdf-export-plugin==0.5.*
+mkdocstrings==0.19.*
+mkdocstrings-python==0.7.*
+mypy==0.950.*
+pytest==7.1.*
+pytest-cov==3.0.*
+pytest-html==3.1.*
+requests==2.27.*
+urllib3==1.26.*
